# feo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: qa.yml
feo/: Cargo.toml
feo/src/: colors.rs  lib.rs  main.rs
sinfo/: Cargo.toml  README.md
sinfo/src/: lib.rs
src/: colors.rs  lib.rs  main.rs  system_info.rs
tests/unit_tests/: test_colors.rs  test_lib copy.rs  test_lib.rs  test_system_info.rs
