[package]
name = "feo"
version = "0.1.4"
authors = ["Victor Nilsson <@vcrn>"]
description = "Simple system monitoring CLI tool for Linux, with GPU temperature monitor for Raspberry Pi"
keywords = ["feo", "monitoring", "htop", "cli", "linux"]
categories = ["visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vcrn/feo"
homepage = "https://github.com/vcrn/feo"
readme = "../README.md"
edition = "2021"

[dependencies]
rounded-div = "0.1.2"
clap = { version = "3.1.6", features = ["derive"] }
termion = "1.5.6"
anyhow = "1.0.66"
sinfo = "0.1.2"