[package]
name = "sinfo"
version = "0.2.0"
edition = "2021"
description = "Crate that checks Linux systems' CPU temperature, RAM and swap (total and free), CPU time, number of CPUs, and uptime."
keywords = ["sinfo", "linux", "monitoring"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vcrn/feo/tree/main/sinfo"
homepage = "https://github.com/vcrn/feo/tree/main/sinfo"
readme = "README.md"

[dependencies]
anyhow = "1.0.66"
